<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ciis_50th_logo"
            android:contentDescription="@string/img_description" />

        <TextView
            style="@style/Intro"
            android:text="@string/introCopy" />

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/Question"
            android:text="@string/q1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q1a1"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q1a1"/>

            <RadioButton
                android:id="@+id/q1a2"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q1a2"/>

            <RadioButton
                android:id="@+id/q1a3"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q1a3"/>

            <RadioButton
                android:id="@+id/q1a4"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q1a4"/>

        </RadioGroup>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/Question"
            android:text="@string/q2"/>

        <CheckBox
            android:id="@+id/q2a1"
            style="@style/Answer"
            android:text="@string/q2a1"/>

        <CheckBox
            android:id="@+id/q2a2"
            style="@style/Answer"
            android:text="@string/q2a2"/>

        <CheckBox
            android:id="@+id/q2a3"
            style="@style/Answer"
            android:text="@string/q2a3"/>

        <CheckBox
            android:id="@+id/q2a4"
            style="@style/Answer"
            android:text="@string/q2a4"/>

        <CheckBox
            android:id="@+id/q2a5"
            style="@style/Answer"
            android:text="@string/q2a5"/>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/Question"
            android:text="@string/q3"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3a1"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q3a1"/>

            <RadioButton
                android:id="@+id/q3a2"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q3a2"/>

            <RadioButton
                android:id="@+id/q3a3"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q3a3"/>

            <RadioButton
                android:id="@+id/q3a4"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q3a4"/>

        </RadioGroup>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/Question"
            android:text="@string/q4"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4a1"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q4a1"/>

            <RadioButton
                android:id="@+id/q4a2"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q4a2"/>

            <RadioButton
                android:id="@+id/q4a3"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q4a3"/>

            <RadioButton
                android:id="@+id/q4a4"
                style="@style/Answer"
                android:layout_weight="1"
                android:text="@string/q4a4"/>

        </RadioGroup>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/Question"
            android:text="@string/q5"/>

        <CheckBox
            android:id="@+id/q5a1"
            style="@style/Answer"
            android:text="@string/q5a1"/>

        <CheckBox
            android:id="@+id/q5a2"
            style="@style/Answer"
            android:text="@string/q5a2"/>

        <CheckBox
            android:id="@+id/q5a3"
            style="@style/Answer"
            android:text="@string/q5a3"/>

        <CheckBox
            android:id="@+id/q5a4"
            style="@style/Answer"
            android:text="@string/q5a4"/>

        <CheckBox
            android:id="@+id/q5a5"
            style="@style/Answer"
            android:text="@string/q5a5"/>

        <CheckBox
            android:id="@+id/q5a6"
            style="@style/Answer"
            android:text="@string/q5a6"/>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/Question"
            android:text="@string/q6"/>

        <EditText
            android:id="@+id/q6a1"
            style="@style/Answer"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/q6hint"
            android:inputType="textPersonName" />

        <Button
            style="@style/Button"
            android:onClick="submitQuiz"
            android:text="@string/submit_button" />

    </LinearLayout>

</ScrollView>